(library
  (name utilities)
  (modules utilities))
(library 
  (name intcode)
  (modules intcode))
(executable
  (name day_11)
  (modules day_11)
  (libraries utilities intcode))
(executable
  (name day_12)
  (modules day_12)
  (libraries utilities))
(executable
  (name day5)
  (modules day5)
  (libraries utilities intcode))